--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -6,7 +6,7 @@ server {
 
     # API proxy - note the trailing slash in location AND proxy_pass
     location /api/ {
-        proxy_pass http://backend-service:5000/api/;
+        proxy_pass http://taskmanager-backend-service:5000/api/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
